[package]
name = "crabcluster"
description = " A simple integrated container orchestration solution"
repository = "https://github.com/svenstaro/crabcluster"
readme = "README.md"
license = "MIT"
keywords = ["cluster", "orchestration", "container"]
categories = ["command-line-utilities", "network-programming"]
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1.58"
axum = { version = "0.6", default-features = false, features = ["http2", "tokio", "json"] }
openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls", "json"] }
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
# clap_complete = "4"
# clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2.2"
uuid = { version = "1.2", features = ["v4", "serde"] }
sled = { version = "0.34", features = ["compression"] }
podman-api = "0.7"
directories = "4"
